    FIXED - WriteConfig (i.e. editor) won't 'lose' absolute keyword from 
    FIXED - fixed some function-name clashes with other plugins
    FIXED - PHP 5.3/5.4/strict related errors ("Creating default object from empty value")
    CHANGE - editor snap function improved (snap to *nearest* point) (thanks Andreas Braun)
    CHANGE - no longer shows .-prefixed files in map config picker
    CHANGE - editor ignores attempts to rename nodes to have space in names
    ADDED - Caching for cacti data fetched by dsstats and rrdtool/poller_output DS plugins
    ADDED - Ability to disable any warning with 'SET nowarn_WMxxx 1'

0.97a	FIXED - Incorrect action URL in 'map selector' combo box for Cacti users.
	FIXED - cacti_graph_id set to 0 instead of ID, by rrd/poller_output and dsstats plugins (thanks sh0x)
	FIXED - 'classic' legend drew 'hidden' colour values for things like key background colour. (thanks jmayniac)
	FIXED - PHP 5.3 deprecated code in HTML_Imagemap.class.php
	FIXED - 'Show Only First' option ignored in Cacti (thanks inko_nick)
	FIXED - Editor deals with overlapping nodes on different ZORDERS properly.
	FIXED - "property of non-object in editor.php line 466" while editing map properties (thanks to iNeo)
	FIXED - no-data option on command-line didn't work 
	FIXED - Clone Node was broken in 0.97 
	FIXED - Maps with per-user permissions show up multiple times in map selector
	FIXED - Removed incorrect warning about imagefilter and USEICONSCALE.
	FIXED - string escaping bug with editor and direct config changes (thanks uhtred)
        FIXED - --imageuri was ignored on command-line (thanks Marcus Stögbauer)
	FIXED - links with targets containing spaces are broken by the editor (thanks Andreas Braun)
	FIXED - deprecated jQuery function call in cacti-pick.php (thanks again Andreas Braun)
	CHANGE - Group sorting is a bit more logical and the presentation nicer.
        CHANGE - cacti-integrate.php uses getopt to take more command-line params